--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,10 @@
  	<head>
 		<meta charset="utf-8"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge; chrome=1"/>
+		<!-- CSRF Token -->
+		<meta name="_csrf_token" th:content="${csrfToken}">
+		<meta name="_csrf_parameter" th:content="${csrfParameterName}">
+		<meta name="_csrf_header" th:content="${csrfHeaderName}">
 		<title>iFrame 2.0 - Cloud IFRS17 Closing Services</title>
 		<!-- CSS file -->
 		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet"/>
@@ -92,6 +96,8 @@
 		     	// CSRF 토큰과 헤더 이름을 메타 태그에서 가져오기
 		        var csrfToken = $("meta[name='_csrf_token']").attr("content");
 		        var csrfHeader = "X-CSRF-Token";
+		        
+		        console.log("csrfToken:"+ csrfToken);
 				
 				$.ajax({
 					type: "post",
