--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -269,6 +269,7 @@
 				</script>
 				<form id="form" name="form" method="post" action="/menuLink">
 					<input type="hidden" id="pageName" name="pageName" />
+					<input type="hidden" th:name="${csrfParameterName}" th:value="${csrfToken}" />
 				</form>
 				<div class="collapse navbar-collapse" id="sidebar-menu">
 					<ul class="navbar-nav pt-lg-3">
