--- a/src/main/resources/templates/views/user/newCompany.html
+++ b/src/main/resources/templates/views/user/newCompany.html
@@ -3,6 +3,9 @@
  	<head>
 		<meta charset="utf-8"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge; chrome=1"/>
+		<meta name="_csrf_token" th:content="${csrfToken}">
+		<meta name="_csrf_parameter" th:content="${csrfParameterName}">
+		<meta name="_csrf_header" th:content="${csrfHeaderName}">
 		<title>iFrame 2.0 - Cloud IFRS17 Closing Services</title>
 		<!-- CSS file -->
 		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet"/>
@@ -433,6 +436,7 @@
 
 			<form id="form" name="form" method="post" action="/menuLink">
 				<input type="hidden" id="pageName" name="pageName" />
+				<input type="hidden" th:name="${csrfParameterName}" th:value="${csrfToken}" />
 			</form>
 
 <script>
