--- a/src/main/resources/templates/views/user/newPassword.html
+++ b/src/main/resources/templates/views/user/newPassword.html
@@ -59,6 +59,8 @@
     function submitPasswordChange() {
         var vNewPassword        = $("#newPassword").val();
         var vConfirmNewPassword = $("#confirmNewPassword").val();
+        var csrfToken     = $("meta[name='_csrf_token']").attr("content");
+    	var csrfHeader    = $("meta[name='_csrf_header']").attr("content");
     	if ( isNull(vNewPassword) == "" ) {
             alert("Enter new password.");
             $("#newPassword").focus();
@@ -85,6 +87,10 @@
             dataType: "json",
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify(requestData),
+            beforeSend: function (xhr) {
+	            // 헤더에 CSRF 토큰을 포함
+	            xhr.setRequestHeader(csrfHeader, csrfToken);
+	        },
             success: function (data) {
                 alert("Your password has been changed successfully.");
                 $("#pageName").val("login");
