--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -81,6 +81,8 @@
     	var vCompNo     = $("#companyNo").val();
     	var vUsrId      = $("#userId").val();
     	var vUsrPhNo    = $("#userPhone").val();
+    	var csrfToken     = $("meta[name='_csrf_token']").attr("content");
+    	var csrfHeader    = $("meta[name='_csrf_header']").attr("content");
     	
     	if ( isNull(vCompNoDvCd) == "" ) {
             alert("Select type of your company identification.");
@@ -127,6 +129,10 @@
             dataType: "json",
             contentType: "application/json; charset=utf-8",
             data: JSON.stringify(requestData),
+            beforeSend: function (xhr) {
+	            // 헤더에 CSRF 토큰을 포함
+	            xhr.setRequestHeader(csrfHeader, csrfToken);
+	        },
             success: function (data) {
                 
             	//alert("비밀번호 초기화 신청이 완료되었습니다. 이메일로 임시 비밀번호가 전송됩니다.");
